--- a/login_style.css
+++ b/login_style.css
@@ -50,7 +50,7 @@ body {
 }
 
 .headline-underline {
-    width: 25%;
+    width: 18%;
     height: 3px;
     background-color: rgb(41, 171, 226);
     margin-bottom: 5%;
@@ -116,7 +116,22 @@ body {
     font-size: 15px;
 }
 
-.button {
+.button{
+    padding-left: 22px;
+    padding-right: 22px;
+    height: 36px;
+    border-radius: 5px;
+    border: none;
+    background-color: rgb(42, 54, 71);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 13px;
+    font-weight: 600;
+}
+
+.button button {
     padding-left: 22px;
     padding-right: 22px;
     height: 36px;
@@ -198,7 +213,7 @@ body {
     justify-content: space-evenly;
     align-items: center;
     font-size: 12px;
-    margin-top: 10%;
+    margin-top: 7%;
 }
 
 .remember-me {
@@ -334,7 +349,7 @@ margin-right: 10px;
 
 @media (max-width: 550px) {
     .join-logo img{
-        height: 50px;
+        height: 60px;
     }
 
     .join-logo {
@@ -345,7 +360,6 @@ margin-right: 10px;
 
     .login-head {
         display: none;
-
     }
 
     .login-head-mobile {
@@ -390,7 +404,7 @@ margin-right: 10px;
         height: 90%;
         width: 90%;
         padding-bottom: 30px;
-        margin-top: 20px;
+        margin-top: 35px;
     }
 
     .rememberMe-forgotPassword {
@@ -413,7 +427,7 @@ margin-right: 10px;
 
     .button {
         margin-bottom: 20px;
-        width: 160px;
+        width: 160px !important;
         height: 43px;
     }
 
@@ -426,8 +440,13 @@ margin-right: 10px;
     /* Sign up Area*/
 
     .signUp-area {
-        height: 550px;
+        height: 460px;
         width: 90%;
+        margin-top: 50px;
+    }
+
+    .headline h1 {
+        font-size: 30px;
     }
 
     .signup-name-field {
@@ -442,7 +461,7 @@ margin-right: 10px;
 
     .signup-password-field {
         width: 80%;
-        margin-bottom: 11%;
+        margin-bottom: 4%;
     }
 
     /* Forgot Password*/
@@ -455,6 +474,19 @@ margin-right: 10px;
     .forgot-password-area {
         width: 90%;
         justify-content: center;
-        height: 400px;
+        height: 350px;
+    }
+
+    .headline {
+        text-align: center;
+    }
+
+    .headline h2 {
+        font-size: 20px;
+        font-weight: 600;
+    }
+
+    .forgot-password-email-field {
+        width: 80%;
     }
 }
