--- a/assets/templates/mobile_template.html
+++ b/assets/templates/mobile_template.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="assets/templates/mobile_template_style.css">
+
+    <script src="mini_backend.js"></script>
 </head>
 <body>
     <div class="topper-mobile">
