--- a/assets/templates/add_task_template.html
+++ b/assets/templates/add_task_template.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="fonts.css">
 
     <script src="add_task.js"></script>
+    <script src="mini_backend.js"></script>
 </head>
 
 <body>
