--- a/assets/templates/destop_template.html
+++ b/assets/templates/destop_template.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="assets/templates/destop_template_style.css">
     <script src="script.js"></script>
+    <script src="mini_backend.js"></script>
 </head>
 
 <body>
