--- a/assets/templates/add_task_template.html
+++ b/assets/templates/add_task_template.html
@@ -11,10 +11,11 @@
     <link rel="stylesheet" href="fonts.css">
 
     <script src="add_task.js"></script>
+    <script src="script.js"></script>
     <script src="mini_backend.js"></script>
 </head>
 
-<body>
+<body onload="init()">
     <div class="content-background" onclick="hideAddTask()">
         <div class="content-addtask" onclick="doNotClose(event)">
             <h1 class="addtask-h1">Add task</h1>
