--- a/assets/templates/destop_template.html
+++ b/assets/templates/destop_template.html
@@ -11,7 +11,7 @@
     <script src="mini_backend.js"></script>
 </head>
 
-<body>
+<body onload="init()">
     <div class="nav-bar">
         <img src="assets/img/logo_lefter.svg">
         <a href="summary.html">
