--- a/assets/templates/mobile_template.html
+++ b/assets/templates/mobile_template.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="assets/templates/mobile_template_style.css">
 
     <script src="mini_backend.js"></script>
+    <script src="script.js"></script>
 </head>
-<body>
+<body onload="init()">
     <div class="topper-mobile">
         <img src="assets/img/joinlogoBlack.svg">
         <img src="assets/img/profile_pic.png" class="profile-pic" onclick="showLogout()">
