--- a/assets/templates/add_task_template.html
+++ b/assets/templates/add_task_template.html
@@ -13,7 +13,7 @@
     <script src="mini_backend.js"></script>
     <script src="add_task.js"></script>
     <script src="script.js"></script>
-    
+
 </head>
 
 <body onload="init()">
@@ -23,7 +23,8 @@
             <form onsubmit="createTask(); return false">
                 <img src="assets/img/close-button-addtask.svg" class="close-btn" onclick="hideAddTask()">
                 <div class="formContentWithButton">
-                    <div class="divContentAddtask" style="@media(min-width:1024px){border-right: 1px solid rgb(186, 186, 186); padding-left: 0;}">
+                    <div class="divContentAddtask"
+                        style="@media(min-width:1024px){border-right: 1px solid rgb(186, 186, 186); padding-left: 0;}">
                         <span style="margin-top: 0;">Title</span>
                         <input required placeholder="Enter a title" id="input-title">
                         <span>Description</span>
@@ -34,7 +35,7 @@
                             <option>New Category</option>
                             <option value="sales">Sales</option>
                             <option value="backoffice">Backoffice</option>
-                        </select>                          
+                        </select>
                     </div>
                     <div class="divContentAddtask" style="@media(min-width:1024px){padding-right: 0;}">
                         <span style="margin-top: 0;">Due date</span>
@@ -58,20 +59,28 @@
                         <div id="assign-to-list" class="dropdown-check-list-contacts" tabindex="100">
                             <span class="anchor">Select Contacts</span>
                             <ul class="items">
-                              <li><input class="input-contact" type="checkbox" />1 </li>
-                              <li><input class="input-contact" type="checkbox" />2</li>
-                              <li><input class="input-contact" type="checkbox" />3 </li>
-                              <li><input class="input-contact" type="checkbox" />4 </li>
-                              <li><input class="input-contact" type="checkbox" />5 </li>
-                              <li><input class="input-contact" type="checkbox" />6 </li>
-                              <li><input class="input-contact" type="checkbox" />7</li>
+                                <li class="input-contact-listitem" value="1"><input class="input-contact"
+                                        type="checkbox" />1 </li>
+                                <li class="input-contact-listitem" value="2"><input class="input-contact"
+                                        type="checkbox" />2</li>
+                                <li class="input-contact-listitem" value="3"><input class="input-contact"
+                                        type="checkbox" />4 </li>
+                                <li class="input-contact-listitem" value="4"><input class="input-contact"
+                                        type="checkbox" />5 </li>
+                                <li class="input-contact-listitem" value="5"><input class="input-contact"
+                                        type="checkbox" />6 </li>
+                                <li class="input-contact-listitem" value="6"><input class="input-contact"
+                                        type="checkbox" />7</li>
+                                <li class="input-contact-listitem" value="7"><input class="input-contact"
+                                        type="checkbox" />3 </li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="div-button">
-                    <button class="clear-btn" type="button" onclick="clearTask()">Clear<img src="assets/img/clearTaskImg.svg"></button>
-                    <button type="submit" class="create-task-btn" >Create Task<img
+                    <button class="clear-btn" type="button" onclick="clearTask()">Clear<img
+                            src="assets/img/clearTaskImg.svg"></button>
+                    <button type="submit" class="create-task-btn">Create Task<img
                             src="assets/img/createTaskImg.svg"></button>
                 </div>
             </form>
