--- a/assets/templates/add_task_template.css
+++ b/assets/templates/add_task_template.css
@@ -247,6 +247,65 @@ select:hover {
     display: none;
 }
 
+.new-category{
+    display: flex;
+    flex-direction: column;
+    margin-left: 8px;
+}
+
+.new-category-name{
+    display: flex;
+    background-color: white;
+    border-radius: 8px;
+    border: 1px solid rgb(221, 221, 221);
+}
+
+.new-category-name input{
+    width: 80%;
+    border: 0;
+}
+
+.new-category-name button{
+    width: 10%;
+    background-color: white;
+    border: 0;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+}
+
+.new-category-name button:hover{
+    cursor: pointer;
+}
+
+
+.new-category-name img{
+    height: 12px;
+    object-fit: contain;
+}
+
+.select-color-category{
+    margin-top: 8px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.select-color-category div{
+    width: 18px;
+    height: 18px;
+    border: 1px solid white;
+    border-radius: 100%;
+}
+
+.select-color-category div:hover{
+    cursor: pointer;
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.5);
+}
+
+.selected-color{
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.5);
+}
+
 /*chechlist for contacts*/
 .dropdown-check-list-contacts {
     display: inline-block;
