--- a/contacts_style.css
+++ b/contacts_style.css
@@ -59,8 +59,17 @@ h3 {
     overflow-y: auto;
 }
 
+.all-contacts-div {
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .alphabet-box {
-    width: 80%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -612,6 +621,11 @@ margin-top: 30px;
 
     .all-contacts {
         width: 100%;
+        margin-bottom: 80px;
+    }
+
+    .all-contacts-div {
+        height: 80%;
     }
 
     .alphabet-box {
