--- a/assets/templates/add_task_template.html
+++ b/assets/templates/add_task_template.html
@@ -12,6 +12,7 @@
 
     <script src="mini_backend.js"></script>
     <script src="add_task.js"></script>
+    <script src="new_contact.js"></script>
     <script src="script.js"></script>
 
 </head>
@@ -71,21 +72,7 @@
                         <span>Assigned to</span>
                         <div id="assign-to-list" class="dropdown-check-list-contacts" tabindex="100">
                             <span class="anchor">Select Contacts</span>
-                            <ul class="items">
-                                <li class="input-contact-listitem" value="1"><input class="input-contact"
-                                        type="checkbox" />1 </li>
-                                <li class="input-contact-listitem" value="2"><input class="input-contact"
-                                        type="checkbox" />2</li>
-                                <li class="input-contact-listitem" value="3"><input class="input-contact"
-                                        type="checkbox" />4 </li>
-                                <li class="input-contact-listitem" value="4"><input class="input-contact"
-                                        type="checkbox" />5 </li>
-                                <li class="input-contact-listitem" value="5"><input class="input-contact"
-                                        type="checkbox" />6 </li>
-                                <li class="input-contact-listitem" value="6"><input class="input-contact"
-                                        type="checkbox" />7</li>
-                                <li class="input-contact-listitem" value="7"><input class="input-contact"
-                                        type="checkbox" />3 </li>
+                            <ul class="items" id="contacts-to-assign">
                             </ul>
                         </div>
                     </div>
