--- a/assets/templates/mobile_template.html
+++ b/assets/templates/mobile_template.html
@@ -10,7 +10,7 @@
     <script src="mini_backend.js"></script>
     <script src="script.js"></script>
 </head>
-<body onload="init()">
+<body>
     <div class="topper-mobile">
         <img src="assets/img/joinlogoBlack.svg">
         <img src="assets/img/profile_pic.png" class="profile-pic" onclick="showLogout()">
