--- a/assets/templates/add_task_template.html
+++ b/assets/templates/add_task_template.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body onload="init()">
+<body onload="initAddTask()">
     <div class="content-background" onclick="hideAddTask()">
         <div class="content-addtask" onclick="doNotClose(event)">
             <h1 class="addtask-h1">Add task</h1>
