--- a/assets/templates/destop_template.html
+++ b/assets/templates/destop_template.html
@@ -12,7 +12,7 @@
     
 </head>
 
-<body onload="init()">
+<body>
     <div class="nav-bar">
         <img src="assets/img/logo_lefter.svg">
         <a href="summary.html">
