--- a/login_style.css
+++ b/login_style.css
@@ -353,6 +353,13 @@ margin-right: 10px;
     font-weight: 600;
 }
 
+.forgot-pw-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 
 @media (min-width: 550px) {
     .login-head-mobile {
