--- a/login_style.css
+++ b/login_style.css
@@ -35,11 +35,24 @@ body {
     left: 50px;
     z-index: 10;
 
+    
+
 }
 
 @keyframes showLogo  {
-    0% {left: 100vw;}
-    100% {left: 0;}
+    0% {
+        position: absolute;
+        height: 3500px;
+        background-color: rgb(246, 247, 248);
+    }
+
+    50% {
+        background-color: none;
+    }
+
+    100% {
+        height: 90px;
+    }
 }
 
 .join-logo img {
@@ -47,7 +60,8 @@ body {
     /*background-color: rgb(246, 247, 248);*/
     height: 90px;
     animation: showLogo;
-    animation-duration:2s;
+    animation-duration:1.5s;
+    animation-fill-mode:forwards;
 }
 
 .headline {
