--- a/login_style.css
+++ b/login_style.css
@@ -29,14 +29,55 @@ body {
     align-items: center;
 }
 
+.start-join-logo {
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    animation: showJoin;
+    animation-duration: 5s;
+    animation-fill-mode:both;
+}
+
+.start-join-logo img {
+    height: 90px;
+}
+
+@keyframes showJoin  {
+    0% {
+        height: 100%;
+        width: 100%;
+        background-color: white;
+    }
+
+    80% {
+        position: absolute;
+        top: 100px;
+        left: 100px;
+        height: 10%;
+        width: 10%;
+        background-color: none;
+    }
+
+    100% {
+        height: 10%;
+        width: 10%;
+        
+        top: 48px;
+        left: 15px;
+        
+    }
+}
+
 .join-logo {
     position: absolute;
     top: 50px;
     left: 50px;
     z-index: 10;
-
-    
-
 }
 
 @keyframes showLogo  {
