--- a/login_style.css
+++ b/login_style.css
@@ -31,47 +31,33 @@ body {
 
 .start-join-logo {
     position: fixed;
-    height: 100vh;
-    width: 100vw;
-    z-index: 10;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 7;
+    border-radius: 0;
+    background: white;
+    left:0; top:0;
+    width: 100vw;
+    height:100vh;
 
-    animation: showJoin;
-    animation-duration: 5s;
-    animation-fill-mode:both;
+    transition: 1.7s;
+    /*-webkit-transition: 1.7s;*/
+}
+
+.start-join-logo.lowScreen {
+    background: none;
+    left:50px; top:50px;
+    width: 90px;
+    height: 90px;
 }
 
 .start-join-logo img {
     height: 90px;
 }
 
-@keyframes showJoin  {
-    0% {
-        height: 100%;
-        width: 100%;
-        background-color: white;
-    }
 
-    80% {
-        position: absolute;
-        top: 100px;
-        left: 100px;
-        height: 10%;
-        width: 10%;
-        background-color: none;
-    }
-
-    100% {
-        height: 10%;
-        width: 10%;
-        
-        top: 48px;
-        left: 15px;
-        
-    }
-}
 
 .join-logo {
     position: absolute;
@@ -80,7 +66,7 @@ body {
     z-index: 10;
 }
 
-@keyframes showLogo  {
+/*@keyframes showLogo  {
     0% {
         position: absolute;
         height: 3500px;
@@ -94,7 +80,7 @@ body {
     100% {
         height: 90px;
     }
-}
+}*/
 
 .join-logo img {
     position: absolute;
