--- a/login_style.css
+++ b/login_style.css
@@ -36,59 +36,40 @@ body {
     justify-content: center;
     align-items: center;
     z-index: 7;
-    border-radius: 0;
-    background: white;
-    left:0; top:0;
-    width: 100vw;
-    height:100vh;
-
-    transition: 1.7s;
-    /*-webkit-transition: 1.7s;*/
-}
-
-.start-join-logo.lowScreen {
     background: none;
     left:50px; top:50px;
     width: 90px;
     height: 90px;
+
+    animation: showJoinLogo;
+    animation-duration: 2s;
 }
 
 .start-join-logo img {
     height: 90px;
 }
 
-
-
-.join-logo {
-    position: absolute;
-    top: 50px;
-    left: 50px;
-    z-index: 10;
-}
-
-/*@keyframes showLogo  {
+@keyframes showJoinLogo {
     0% {
-        position: absolute;
-        height: 3500px;
-        background-color: rgb(246, 247, 248);
+    background: white;
+    left:0; top:0;
+    width: 100vw;
+    height:100vh;
     }
 
     50% {
-        background-color: none;
+    background: white;
+    left:0; top:0;
+    width: 100vw;
+    height:100vh;
     }
 
     100% {
-        height: 90px;
-    }
-}*/
-
-.join-logo img {
-    position: absolute;
-    /*background-color: rgb(246, 247, 248);*/
+    background: none;
+    left:50px; top:50px;
+    width: 90px;
     height: 90px;
-    animation: showLogo;
-    animation-duration:1.5s;
-    animation-fill-mode:forwards;
+    }
 }
 
 .headline {
@@ -421,14 +402,37 @@ margin-right: 10px;
 
 
 @media (max-width: 550px) {
-    .join-logo img{
+    .start-join-logo img{
         height: 60px;
     }
 
-    .join-logo {
-        top: 2%;
-        left: 9%;
-        z-index: 1;
+    .start-join-logo {
+        top: 10px;
+        left: 10px;
+        z-index: 6;
+    }
+
+    @keyframes showJoinLogo {
+        0% {
+        background: rgb(42, 54, 71);
+        left:0; top:0;
+        width: 100vw;
+        height:100vh;
+        }
+    
+        50% {
+        background: rgb(42, 54, 71);
+        left:0; top:0;
+        width: 100vw;
+        height:100vh;
+        }
+    
+        100% {
+        background: none;
+        left:10px; top:10px;
+        width: 90px;
+        height: 90px;
+        }
     }
 
     .login-head {
