--- a/login_style.css
+++ b/login_style.css
@@ -58,7 +58,7 @@ body {
     }
 
     50% {
-    background: white;
+    background: rgb(246, 247, 248);
     left:0; top:0;
     width: 100vw;
     height:100vh;
