--- a/summary_style.css
+++ b/summary_style.css
@@ -85,7 +85,7 @@ body{
 
 .first-row a:hover{
     cursor: pointer;
-    transform: scale(1.1);
+    transform: scale(1.05);
     background-color: #2A3647;
     color: white;
     transition: 225ms ease-in-out;
@@ -181,7 +181,7 @@ body{
 
 .third-row a:hover{
     cursor: pointer;
-    transform: scale(1.1);
+    transform: scale(1.05);
     background-color: #2A3647;
     color: white;
     transition: 175ms ease-in-out;
@@ -334,7 +334,11 @@ body{
         width: 100%;
         padding: 8px;
         box-sizing: border-box;
-    }    
+    }  
+    
+    .first-row a{
+        border-radius: 20px;
+    }
 
     .first-row div{
         height: 120px;
