--- a/board.css
+++ b/board.css
@@ -137,7 +137,8 @@ body {
 
 .task {
     width: 23%;
-    height: 72vh;
+    height: 100%;
+    min-height: 72vh;
 }
 
 .dragarea-highlight{
@@ -207,10 +208,12 @@ body {
 
 .card-title {
     font-weight: 700;
+    word-wrap: break-word;
 }
 
 .card-description {
     color: #A8A8A8;
+    word-wrap: break-word;
 }
 
 .card-bottom {
@@ -278,6 +281,7 @@ body {
     font-weight: 600;
     font-size: 50px;
     margin-bottom: 32px;
+    word-wrap: break-word;
 }
 
 .card-description-big {
@@ -285,7 +289,7 @@ body {
     font-size: 22px;
     font-weight: 300;
     margin-bottom: 32px;
-
+    word-wrap: break-word;
 }
 
 .close-overlay-btn {
