--- a/board-mobile.css
+++ b/board-mobile.css
@@ -32,6 +32,7 @@
         width: 100%;
         margin-top: 80px;
         padding: 32px;
+        box-sizing: border-box;
     }
 
     .heading-search-add {
