--- a/board.css
+++ b/board.css
@@ -253,28 +253,24 @@ body {
 
 .card-category-big {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 4px 25px;
-    gap: 10px;
-    margin-bottom: 32px;
+    margin-bottom: 24px;
+    margin-top: 24px;
     width: 25%;
     height: 27px;
-    background: #FF7A00;
     border-radius: 8px;
     color: white;
     font-weight: 300;
     font-size: 18px;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-
 }
 
 .task-overly-details{
     display: flex;
     flex-direction: column;
+    overflow-y: scroll;
+    direction: rtl;
 }
 
 .card-title-big {
@@ -355,7 +351,6 @@ body {
 
 .moveStatusBtns{
     display: flex;
-    width: 270px;
     margin-bottom: 32px;
 }
 
@@ -495,12 +490,12 @@ body {
     border-radius: 20px;
     object-fit: contain;
     background-color: white;
-    padding: 50px;
+    padding: 24px 50px;
+    padding-left: 26px;
     /* right: 28%; */
     /* left: 15%; */
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
 
 }
 
@@ -520,5 +515,7 @@ body {
     font-size: 18px;
 }
 
-
-
+.directionLTR{
+    direction: ltr;
+    margin-left: 24px;
+}
