--- a/board-mobile.css
+++ b/board-mobile.css
@@ -196,6 +196,23 @@
         bottom: 0;
     }
 
+    .alert-delete-task {
+        height: 220px;
+    }    
+
+    .alert-delete-task h2{
+        font-size: 20px;
+    }
+
+    .alert-delete-task-btn{
+        margin-top: 28px;
+    }
+
+    .alert-delete-task-btn button{
+        font-size: 18px;
+        width: 100px;
+    }
+
 }
 
 /* 350 PX */
