--- a/board.css
+++ b/board.css
@@ -31,6 +31,66 @@ body {
     overflow-y: auto;
 }
 
+.alert-delete-task-container{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.alert-delete-task{
+    height: 240px;
+    width: 450px;
+    background-color: white;
+    border-radius: 20px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 48px;
+    box-sizing: border-box;
+}
+
+.close-overlay-btn-delete{
+    height: 32px;
+    width: 32px;
+    position: absolute;
+    right: 16px;
+    top: 16px;
+    cursor: pointer;
+}
+
+.alert-delete-task h2{
+    text-align: center;
+}
+
+.alert-delete-task-btn{
+    margin-top: 32px;
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.alert-delete-task-btn button{
+    font-size: 20px;
+    width: 120px;
+    height: 44px;
+    background: #2A3647;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+    color: white;
+}
+
+.alert-delete-task-btn button:hover {
+    background: #29ABE2;
+}
 .main-heading {
     font-size: 61px;
     font-weight: 700;
