--- a/add_task.css
+++ b/add_task.css
@@ -138,7 +138,7 @@ select:hover {
 }
 
 .choosePriorityPicked img {
-    filter: invert(99%) sepia(64%) saturate(2%) hue-rotate(57deg) brightness(109%) contrast(101%);
+    filter: brightness(0) invert(1);
 }
 
 
@@ -271,6 +271,10 @@ select:hover {
     object-fit: contain;
 }
 
+option{
+    color: white;
+}
+
 .select-color-category{
     margin-top: 8px;
     display: flex;
@@ -305,6 +309,11 @@ select:hover {
     padding: 5px 50px 5px 10px;
     border: 1px solid #ccc;
     margin: 0;
+    width: -webkit-fill-available;
+    margin-left: 8px;
+    font-size: 14px;
+    background-color: white;
+    border-radius: 8px;
 }
 
 .dropdown-check-list-contacts .anchor:after {
@@ -334,14 +343,12 @@ select:hover {
     border: 1px solid #ccc;
     max-height: 82px;
     overflow-y: auto;
+    margin-left: 8px;
 }
 
 .dropdown-check-list-contacts ul.items li {
     list-style: none;
-}
-
-.dropdown-check-list-contacts.visible .anchor {
-    color: #0094ff;
+    color: white;
 }
 
 .dropdown-check-list-contacts.visible .items {
