--- a/assets/templates/add_task_template.css
+++ b/assets/templates/add_task_template.css
@@ -119,6 +119,10 @@ select:hover {
     cursor: pointer;
 }
 
+option{
+    color: white;
+}
+
 .divContentAddtask span {
     box-sizing: unset;
     margin-top: 24px;
@@ -167,7 +171,7 @@ select:hover {
 }
 
 .choosePriorityPicked img {
-    filter: invert(99%) sepia(64%) saturate(2%) hue-rotate(57deg) brightness(109%) contrast(101%);
+    filter: brightness(0) invert(1);
 }
 
 .div-button {
@@ -326,6 +330,11 @@ select:hover {
     padding: 5px 50px 5px 10px;
     border: 1px solid #ccc;
     margin: 0;
+    width: -webkit-fill-available;
+    margin-left: 8px;
+    font-size: 14px;
+    background-color: white;
+    border-radius: 8px;
 }
 
 .dropdown-check-list-contacts .anchor:after {
@@ -355,14 +364,12 @@ select:hover {
     border: 1px solid #ccc;
     max-height: 82px;
     overflow-y: auto;
+    margin-left: 8px;
 }
 
 .dropdown-check-list-contacts ul.items li {
     list-style: none;
-}
-
-.dropdown-check-list-contacts.visible .anchor {
-    color: #0094ff;
+    color: white;
 }
 
 .dropdown-check-list-contacts.visible .items {
