--- a/assets/templates/add_task_template.html
+++ b/assets/templates/add_task_template.html
@@ -35,7 +35,7 @@
                         </select>
                         <div class="new-category d-none" id="create-category">
                             <div class="new-category-name">
-                                <input id="new-category" placeholder="Name"></input>
+                                <input id="new-category" maxlength="10" placeholder="Name"></input>
                                 <button onclick="dismissCategory()" type="button"><img style="height: 18px;"
                                         src="assets/img/close-button-addtask.svg"></button>
                                 <button onclick="createNewCategory()" type="button"><img src="assets/img/check-addtask.svg"></button>
