--- a/board.css
+++ b/board.css
@@ -31,7 +31,7 @@ body {
     overflow-y: auto;
 }
 
-.alert-delete-task-container{
+.alert-delete-task-container {
     position: fixed;
     top: 0;
     bottom: 0;
@@ -44,7 +44,7 @@ body {
     align-items: center;
 }
 
-.alert-delete-task{
+.alert-delete-task {
     height: 240px;
     width: 450px;
     background-color: white;
@@ -57,7 +57,7 @@ body {
     box-sizing: border-box;
 }
 
-.close-overlay-btn-delete{
+.close-overlay-btn-delete {
     height: 32px;
     width: 32px;
     position: absolute;
@@ -66,18 +66,18 @@ body {
     cursor: pointer;
 }
 
-.alert-delete-task h2{
+.alert-delete-task h2 {
     text-align: center;
 }
 
-.alert-delete-task-btn{
+.alert-delete-task-btn {
     margin-top: 32px;
     width: 80%;
     display: flex;
     justify-content: space-between;
 }
 
-.alert-delete-task-btn button{
+.alert-delete-task-btn button {
     font-size: 20px;
     width: 120px;
     height: 44px;
@@ -88,9 +88,18 @@ body {
     color: white;
 }
 
+.alert-delete-delete-btn {
+    background-color: red !important;
+}
+
+.alert-delete-delete-btn:hover {
+    background-color: rgb(255, 105, 105) !important;
+}
+
 .alert-delete-task-btn button:hover {
     background: #29ABE2;
 }
+
 .main-heading {
     font-size: 61px;
     font-weight: 700;
@@ -201,7 +210,7 @@ body {
     min-height: 72vh;
 }
 
-.dragarea-highlight{
+.dragarea-highlight {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -254,9 +263,10 @@ body {
     padding: 4px 25px;
     gap: 10px;
     margin-bottom: 10px;
-    width: 50%;
+    width: fit-content;
+    max-width: 100%;
+    min-width: 30%;
     height: 27px;
-    background: #FF7A00;
     border-radius: 8px;
     color: white;
     font-weight: 300;
@@ -318,7 +328,9 @@ body {
     padding: 4px 25px;
     margin-bottom: 24px;
     margin-top: 24px;
-    width: 25%;
+    min-width: 30%;
+    width: fit-content;
+    max-width: 100%;
     height: 27px;
     border-radius: 8px;
     color: white;
@@ -326,7 +338,7 @@ body {
     font-size: 18px;
 }
 
-.task-overly-details{
+.task-overly-details {
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
@@ -395,7 +407,7 @@ body {
     cursor: pointer;
 }
 
-.edit-overlay-btn-delete img{
+.edit-overlay-btn-delete img {
     height: 28px;
     object-fit: contain;
 }
@@ -403,18 +415,19 @@ body {
 .edit-overlay-btn-delete:hover {
     background: #29ABE2;
 }
-.headingMoveStatusBtns{
+
+.headingMoveStatusBtns {
     font-size: 22px;
     margin-bottom: 14px;
     font-weight: bold;
 }
 
-.moveStatusBtns{
+.moveStatusBtns {
     display: flex;
     margin-bottom: 32px;
 }
 
-.edit-overlay-btn-statuslast{
+.edit-overlay-btn-statuslast {
     font-size: 20px;
     width: 120px;
     height: 44px;
@@ -429,7 +442,7 @@ body {
     background: #29ABE2;
 }
 
-.edit-overlay-btn-statusnext{
+.edit-overlay-btn-statusnext {
     font-size: 20px;
     width: 120px;
     height: 44px;
@@ -575,7 +588,7 @@ body {
     font-size: 18px;
 }
 
-.directionLTR{
+.directionLTR {
     direction: ltr;
     margin-left: 24px;
 }
