--- a/contacts_style.css
+++ b/contacts_style.css
@@ -95,12 +95,13 @@ h3 {
     flex-direction: row;
     align-items: center;
     height: 60px;
-    width: 100%;
+    width: 90%;
     background-color: rgb(255, 255, 255);
     color: black;
     border-radius: 8px;
     margin-top: 10px;
     margin-bottom: 10px;
+    margin-left: 20px;
 }
 
 .single-contact:hover {
@@ -743,7 +744,7 @@ margin-top: 30px;
             margin-top: 10vh;
 
             animation: flyInMobile;
-            animation-duration: 0.8s;
+            animation-duration: 0.5s;
         }
 
         .new-addedit-contact {
