changed all favicons to the same one

--- a/assets/templates/add_task_template.html
+++ b/assets/templates/add_task_template.html
@@ -9,6 +9,8 @@
 
     <link rel="stylesheet" href="assets/templates/add_task_template.css">
     <link rel="stylesheet" href="fonts.css">
+    <link rel="shortcut icon" href="assets/img/Join_background.png" type="image/x-icon">
+
 
     <script src="mini_backend.js"></script>
     <script src="add_task.js"></script>
