--- a/assets/templates/help_template.html
+++ b/assets/templates/help_template.html
@@ -7,6 +7,8 @@
     <title>Document</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="assets/templates/help_template_style.css">
+    <link rel="shortcut icon" href="assets/img/Join_background.png" type="image/x-icon">
+
 </head>
 <body>
     <div class="help-content d-none" id="help-content">
