--- a/assets/templates/destop_template.html
+++ b/assets/templates/destop_template.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="assets/templates/destop_template_style.css">
+    <link rel="shortcut icon" href="assets/img/Join_background.png" type="image/x-icon">
+
     <script src="mini_backend.js"></script>
     <script src="script.js"></script>
     
