--- a/board.css
+++ b/board.css
@@ -208,6 +208,8 @@ body {
     width: 23%;
     height: 100%;
     min-height: 72vh;
+    padding: 8px;
+    border-radius: 10px;
 }
 
 .dragarea-highlight {
