--- a/assets/templates/add_task_template.html
+++ b/assets/templates/add_task_template.html
@@ -20,11 +20,11 @@
 </head>
 
 <body onload="initAddTask()">
-    <div class="content-background" id="close-addTask-background" onclick="hideAddTaskBoard()">
+    <div class="content-background" id="close-addTask-background" onclick="hideAddTaskTemplate()">
         <div id="content-addtask" class="content-addtask flyIn" onclick="doNotClose(event)">
             <h1 class="addtask-h1">Add task</h1>
             <form id="formAddTask" onsubmit="createTask(); return false">
-                <img src="assets/img/close-button-addtask.svg" class="close-btn" id="close-btn" onclick="hideAddTaskBoard()">
+                <img src="assets/img/close-button-addtask.svg" class="close-btn" id="close-btn" onclick="hideAddTaskTemplate()">
                 <div class="formContentWithButton">
                     <div class="divContentAddtask"
                         style="@media(min-width:1024px){border-right: 1px solid rgb(186, 186, 186); padding-left: 0;}">
@@ -87,10 +87,6 @@
                 </div>
             </form>
         </div>
-    </div>
-    <div class="dialog-taskadded d-none" id="dialog-taskadded">
-        <span>Task added to board</span>
-        <img src="assets/img/icon-summary.svg">
     </div>
 </body>
 
