--- a/board-mobile.css
+++ b/board-mobile.css
@@ -43,6 +43,7 @@
         width: 100%;
         display: flex;
         flex-direction: column;
+        margin-bottom: 60px;
     }
 
     .task-mobile {
