--- a/assets/templates/destop_template.html
+++ b/assets/templates/destop_template.html
@@ -50,7 +50,7 @@
             </div>
         </a>
         <a href="legal_notice.html">
-            <div class="content-section" style="margin-top: 180px;" id="legalnotice-section">
+            <div class="content-section" style="position: absolute; bottom: 24px" id="legalnotice-section">
                 <div>
                     <img src="assets/img/icon-info.svg">
                 </div>
