--- a/contacts_style.css
+++ b/contacts_style.css
@@ -174,6 +174,7 @@ h3 {
     font-size: 50px;
     font-weight: 700;
     margin-bottom: 0;
+    color: #2A3647;
 }
 
 .horizontal-line {
@@ -694,6 +695,7 @@ margin-top: 30px;
 
     .headline-contacts h1{
         margin-bottom: 32px;
+        color: #2A3647;
     }
 
     .horizontal-line {
