--- a/assets/templates/destop_template.html
+++ b/assets/templates/destop_template.html
@@ -63,7 +63,8 @@
         <div class="img-topper">
             <img src="assets/img/questionmark_topper.svg" onclick="showHelp()" id="help-button"
                 class="questionmark-topper">
-            <img src="assets/img/profile_pic.png" onclick="showLogout()" class="profile-pic">
+            <!--<img src="assets/img/profile_pic.png" onclick="showLogout()" class="profile-pic">-->
+            <span onclick="showLogout()" style="color: #29ABE2; font-size: larger;"><strong>Simon Vitt</strong></span>
         </div>
     </div>
     <div class="logout-button d-none" id="logout-button" onclick="hideLogout()">
