--- a/assets/templates/mobile_template.html
+++ b/assets/templates/mobile_template.html
@@ -15,7 +15,8 @@
 <body>
     <div class="topper-mobile">
         <img src="assets/img/joinlogoBlack.svg">
-        <img src="assets/img/profile_pic.png" class="profile-pic" onclick="showLogout()">
+        <!--<img src="assets/img/profile_pic.png" class="profile-pic" onclick="showLogout()">-->
+        <span onclick="showLogout()" style="color: #29ABE2; display: flex; align-items: center; font-size: larger;"><strong>Simon Vitt</strong></span>
     </div>
     <div class="options-mobile d-none" id="options-mobile" onclick="hideLogout()">
         <div>
