--- a/assets/templates/destop_template_style.css
+++ b/assets/templates/destop_template_style.css
@@ -89,13 +89,13 @@
     .questionmark-topper:hover{
         cursor: pointer;
     }
-    
-    .profile-pic{
-        border-radius: 100%;
-        border: 1px solid black;
+
+    .topper-name-destop{
+        color: #29ABE2;
+        font-size: larger;
     }
 
-    .profile-pic:hover{
+    .topper-name-destop:hover{
         cursor: pointer;
     }
 
