--- a/login_style.css
+++ b/login_style.css
@@ -384,6 +384,7 @@ margin-right: 10px;
     align-items: center;
     font-size: 13px;
     font-weight: 600;
+    border: none;
 }
 
 .forgot-pw-form {
