--- a/reset_forget_success.css
+++ b/reset_forget_success.css
@@ -11,6 +11,10 @@
     top: 9px !important;
 }
 
+.bg-white {
+    background-color: white;
+}
+
 
 @media (max-width: 650px) {
     .reset-password-area {
