many bugs fixed

--- a/assets/templates/add_task_template.html
+++ b/assets/templates/add_task_template.html
@@ -14,12 +14,13 @@
 
     <script src="mini_backend.js"></script>
     <script src="add_task.js"></script>
+    <script src="add_task_template.js"></script>
     <script src="new_contact.js"></script>
     <script src="script.js"></script>
 
 </head>
 
-<body onload="initAddTask()">
+<body onload="initAddTaskTemplate()">
     <div class="content-background" id="close-addTask-background" onclick="hideAddTaskTemplate()">
         <div id="content-addtask" class="content-addtask flyIn" onclick="doNotClose(event)">
             <h1 class="addtask-h1">Add task</h1>
