--- a/contacts_style.css
+++ b/contacts_style.css
@@ -121,7 +121,7 @@ h3 {
     display: flex;
     flex-direction: row;
     align-items: center;
-    height: 60px;
+    min-height: 60px;
     width: 90%;
     background-color: rgb(255, 255, 255);
     color: black;
