--- a/assets/templates/help_template_style.css
+++ b/assets/templates/help_template_style.css
@@ -7,14 +7,15 @@
     top: 89px;
     height: calc(100vh - 89px);
     width: calc(100% - 232px);
-    padding: 80px;
+    padding: 32px 80px;
     box-sizing: border-box;
+    overflow-y: scroll;
 }
 
 .help-content img{
-    position: absolute;
-    top: 80px;
-    right: 80px;
+    position: fixed;
+    top: 115px;
+    right: 32px;
 }
 
 .help-content img:hover{
@@ -43,6 +44,34 @@
     margin-right: 24px ;
 }
 
+/* CSS FOR COLLAPSIBLES */
+
+.collapsible {
+    background-color: #777;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+  }
+  
+  .active, .collapsible:hover {
+    background-color: #555;
+  }
+  
+  .content {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #f1f1f1;
+}
+
+
+
+/* MOBILE VERSION */
 @media(max-width: 1024px){
     .help-content{
         z-index: 1;
@@ -58,9 +87,9 @@
     }
     
     .help-content img{
-        position: absolute;
-        top: 40px;
-        right: 28px;
+        position: fixed;
+        top: 100px;
+        right: 12px;
     }
     
     .help-content img:hover{
